--- a/flaskapp/templates/report-vehicles.html
+++ b/flaskapp/templates/report-vehicles.html
@@ -15,7 +15,7 @@ Outside Vehicles Report
                 <h5 class="card-header text-center">Print </h5>
                     <div class="btn-group-vertical p-2">
                         <button type="button" data-toggle="modal" data-target="#datewisemodal"  class="btn btn-secondary mb-2"> Date Wise Report</button>
-                        
+                        <button type="button" data-toggle="modal" data-target="#deptwisemodal"  class="btn btn-secondary mb-2"> Department Wise Report</button>
                     </div>
                 </div>
     </div>
@@ -39,6 +39,37 @@ Outside Vehicles Report
             </div>
         </div>
     </div>
+
+    <div class="modal fade" id="deptwisemodal" tabindex="-1" role="dialog" aria-labelledby="deptwisemodallabel" aria-hidden="true">
+            <div class="modal-dialog" role="form">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title"> Department Wise Report </h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    </div>
+                    <div class="modal-body">
+                            <form class="form-row" action="{{url_for('report.report_print')}}" method="POST">
+                            <input type="hidden" name="printid" value="22">
+                            <label class=" mb-2 h6 col-form-label" for="#date">Select Date : </label>
+                            <input id="date" type="date" class="form-control" name="date" autofocus>
+                            <label class="col-form-label" for="#deptselect">Select Department</label>
+                            <select class="form-control" name="deptselect" id="deptselect">
+                                {% for d in depts %}
+                                    <option value="{{d.id}}">{{d.department_name}}</option>
+                                {% endfor %}
+                            </select>
+                            <div class="mt-2 form-check">
+                                    <input id="alldeptcheck" class="form-check-input" type="checkbox" name="deptcheck" value="1">
+                                    <label class="form-check-label" for="alldeptcheck"> Sorted by all department?</label>
+                            </div>
+                            <input type="submit"  class="mt-2 btn btn-primary btn-block btn-sm" value="Print">
+                              
+                        </form>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
 
     <div id="all-outsidevehiclecard" class="col">
         <div class="card">
