--- a/flaskapp/templates/report-visitors.html
+++ b/flaskapp/templates/report-visitors.html
@@ -202,7 +202,12 @@
 
 <script type="text/javascript">
     $(document).ready(function() {
-        $('#all-visitoreport').DataTable();
+        var t = $('#all-visitoreport').DataTable({
+            scrollY :500
+            
+        });
+
+
 } );
 </script>
 
