Fixed Departmentwise Outside Vehicle Report

--- a/flaskapp/templates/dashboard-visitors.html
+++ b/flaskapp/templates/dashboard-visitors.html
@@ -60,6 +60,7 @@ Visitor Dashboard
 
 <script src="{{url_for('static', filename='js/chart.min.js')}}"></script>
 
+<!--Date Wise Charting Script-->
 <script type="text/javascript">
 var ctx = document.getElementById('linechartforvisitors').getContext('2d');
 var myChart = new Chart(ctx, {
@@ -110,6 +111,7 @@ var myChart = new Chart(ctx, {
 
 </script>
 
+<!--Department Wise Charting script-->
 <script>
 var deptctx = document.getElementById('barchartfordept').getContext('2d');
 var myChart = new Chart(deptctx, {
