--- a/flaskapp/templates/test-dashboard.html
+++ b/flaskapp/templates/test-dashboard.html
@@ -214,6 +214,38 @@
                 </ul>
                 {% endif %}
 
+                {% if current_user.user_role == 1 or current_user.user_role == 2 or current_user.user_role == 3 %}
+                <h3
+                    class="hvr-sweep-to-bottom sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+
+                    <a data-toggle="collapse" data-target="#editentry-links"
+                        class="d-flex align-items-center text-muted mt-2 p-1 text-decoration-none" href="#">
+                        <span style="font-size: 1.25rem;"> Edit Data</span>
+                        <i style="color:wheat;" class=" ml-3 fas fa-angle-down fa-2x"></i>
+                    </a>
+                </h3>
+                <ul data-parent="#sidenav-styles" id="editentry-links" class="collapse nav flex-column mb-2">
+                    <li class="hvr-underline-from-center nav-item">
+                        <a class="nav-link" href="{{url_for('edit.edit_visitor')}}">
+                            <span style="font-size: 1rem;" data-feather="file-text">Visitors</span>
+
+                        </a>
+                    </li>
+                    <li class="  nav-item">
+                        <a class=" nav-link" href="{{url_for('edit.edit_outsideVehicle')}}">
+                            <span style="font-size: 1rem;" data-feather="file-text">Vehicles</span>
+
+                        </a>
+                        <ul>
+                            <li class="nav-item"><a class="nav-link" href="{{url_for('edit.edit_outsideVehicle')}}"
+                                    style="color: white;">Outside Vehicles</a> </li>
+                            <li class="nav-item"><a class="nav-link" href="{{url_for('edit.edit_millVehicle')}}"
+                                    style="color: white;">Mill Vehicles </a> </li>
+                        </ul>
+                    </li>
+                </ul>
+                {% endif %}
+
                 {% if current_user.user_role == 3 or current_user.user_role == 2 %}
                 <h3
                     class="hvr-sweep-to-bottom sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
