--- a/flaskapp/templates/report-visitors.html
+++ b/flaskapp/templates/report-visitors.html
@@ -18,9 +18,9 @@
             <div class="card">
                     <h5 class="card-header text-center">Print</h5>
                         <div class="btn-group-vertical p-2">
-                            <button type="button" data-toggle="modal" data-target="#datewisemodal"  class="btn btn-secondary mb-2"> Date Wise Report</button>
-                            <button data-toggle="modal" data-target="#departmentwisemodal" class="btn btn-secondary "> Department Wise Report</button>
-                            <button data-toggle="modal" data-target="#personwisemodal" class="btn btn-secondary mt-2 "> Person Wise Report</button>
+                            <button type="button" data-toggle="modal" data-target="#datewisemodal"  class="btn btn-secondary mb-2 rounded-bottom "> Date Wise Report</button>
+                            <button data-toggle="modal" data-target="#departmentwisemodal" class="btn btn-secondary rounded "> Department Wise Report</button>
+                            <button data-toggle="modal" data-target="#personwisemodal" class="btn btn-secondary mt-2 rounded "> Person Wise Report</button>
                         </div>
                     </div>
     </div>
